[tool.poetry]
name = "hello-world-py"
version = "0.1.0"
description = ""
authors = ["mahi"]
readme = "README.md"
packages = [{include = "hello_world_py"}]

[tool.poetry.dependencies]
python = "^3.10"
pendulum = "^2.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
